--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,17 @@ uuid = "37fe0520-12e1-4a5e-91f0-aa9fdfdba98d"
 authors = ["Yusheng Zhao <yushengzhao2020@outlook.com> and contributors"]
 version = "1.0.0-DEV"
 
+[deps]
+Compose = "a81c6b42-2e10-5240-aca2-a61377ecd94b"
+LightGraphs = "093fc24a-ae57-5d10-9952-331d41423f4d"
+Multigraphs = "7ebac608-6c66-46e6-9856-b5f43e107bac"
+Pluto = "c3e4b0f8-55cb-11ea-2926-15256bba5781"
+Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
+StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
+Yao = "5872b779-8223-5990-8dd0-5abbb0748c8c"
+YaoPlots = "32cfe2d9-419e-45f2-8191-2267705d8dbc"
+ZXCalculus = "3525faa3-032d-4235-a8d4-8c2939a218dd"
+
 [compat]
 julia = "1"
 
